# MosaicSC

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  MosaicSC_CPU  main.cpp
examples/example1/: config.txt  lat_last_0  lat_last_1  lat_last_2  lat_last_3  log_0.txt  log_1.txt  log_2.txt  log_3.txt  scs_0  scs_1  scs_2  scs_3
include/: base_component.h  c1.h  c2.h  c3.h  c4.h  definitions.h  io.h  parameters.h  potts.h  sc.h
include/mosaicsc/: base_component.h  c1.h  c2.h  c3.h  c4.h  definitions.h  io.h  parameters.h  potts.h  sc.h
include/utils/: colorcodes.h  constants.h  logger.h  misc.h  msgr.h  stop_watch.h  threads.h  undefined.h
include/utils/arrays/: _misc.h  all.h  array2.h  array3.h  array4.h  arrayN.h
include/utils/random/: core.h  with_cuda.h  with_stl.h
manual_make/: Makefile  lat_last_0  lat_last_1  lat_last_2  lat_last_3  log_0.txt  log_1.txt  log_2.txt  log_3.txt  scs_0  scs_1  scs_2  scs_3
manual_make/asm/: base_component.s  c1.s  c2.s  c3.s  c4.s  io.s  main.s  parameters.s  potts.s
matlab/: Diffusion.m  MFPT.m  autocorr.m
runs/: config_orig.txt  seeds
runs/1/: config.txt  lat_last_0  lat_last_1  lat_last_2  lat_last_3  log_0.txt  log_1.txt  log_2.txt  log_3.txt  scs_0  scs_1  scs_2  scs_3  seeds
scripts/: README.md  analyzeSCs.m  read_log.m  requirements.txt
scripts/temporal_evolution/: common.py  config.py  misc.py  process.ipynb  process.py  records.py
scripts/time_analysis/: README.md  common.py  config.py  read_log.ipynb  read_log.py  records.py
src/: CMakeLists.txt  base_component.cpp  c1.cpp  c2.cpp  c3.cpp  c4.cpp  io.cpp  parameters.cpp  potts.cpp
tests/data/: config.txt
